--- a/next.html
+++ b/next.html
@@ -85,7 +85,7 @@
         <input type="number" name="cvv" id="cvv" placeholder="000" required>
     
         <label for="cardholder-name">Name on Card:</label>
-        <input type="number" name="cardholder-name" id="cardholder-name" placeholder="Full Names" required>
+        <input type="text" name="cardholder-name" id="cardholder-name" placeholder="Full Names" required>
         
         <label for="text">Amount:</label>
         <input type="number" name="Amount" id="Amount" placeholder="Amount" required>
